Updated files fixed typos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <script src="vendors/react-dom.js"></script>
         <script src="vendors/babel.js"></script>
         <script type="text/babel"
-                src="conponents.js"></script>
+                src="components.js"></script>
     </body>
 </html>
