--- a/expample_index.html
+++ b/expample_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <div id="comment"></div>
+        <div id="story-app"></div>
         <script src="vendors/react.js"></script>
         <script src="vendors/react-dom.js"></script>
         <script src="vendors/babel.js"></script>
